# ATLAS

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_ROADMAP.md  README.md  atlas.yaml.example  config.example.yaml  demo_flexible_versioning.py  pyproject.toml  requirements.txt  requisito.txt
atlas/: __init__.py  cli.py
atlas.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
atlas/agents/: __init__.py  base.py  conversation_manager.py  data_collector.py  orchestrator.py  validation.py
atlas/cli/: enhanced_cli.py
atlas/core/: __init__.py  autogen_config.py  config.py  conversation_state.py  exceptions.py  llm_client.py  logging.py  models.py  version_resolver.py
atlas/generators/: __init__.py  ansible.py  terraform.py
docs/: 01_vision_and_scope.md  02_functional_specs.md  README.md  api-key-management.md  software-versioning.md
docs/requirements/: requisito.txt
examples/: flexible-versions-example.yaml  vm-configs.yaml
scripts/: test-step-1.1-minimal.py  test-step-1.1-simple.py  test-step-1.1.py
tests/: milestone_test_1.py  test_agent_conversations.py  test_autogen_setup.py  test_conversation_state.py  test_version_flexibility.py
